# AvScan

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  settings.example.env
alembic/: env.py
alembic/versions/: 0855d87550a4_rebuild_products.py  1325de28ab15_add_completed_tasks_model.py  251bd4ae9d9e_rebuild_products.py  2814f86a51cf_add_task_id_in_product.py  2d3f240f42be_rebuild_task_model.py  4897ed6c465d_delete_field_in_tasks_model.py  4ceac643eb78_rebuild_products.py  4ef8765bb5fb_add_last_update_in_tasks.py  544fdf8795cf_dev.py  54cf3a2cc3ae_rebuild_products.py  5f4678379ebd_add_task_id_in_product.py  85ecce6f6b58_realese.py  d9ff243b85b5_rebuild_products.py
bot/fsm/: user_fsm.py
bot/handlers/: __init__.py  every_parsing.py  interval_parsing.py  parsing.py  settings_task.py  state.py  user_command.py
bot/keyboards/: inline.py
bot/middleware/: __init__.py  db.py
bot/templates/: messages.py
core/: base.py  cache.py  db.py  logger.py  settings.py  task.py
crud/: factory.py  task.py  user.py
models/: __init__.py  task.py  user.py
parser/: parser.py  scraper.py  sm.py  types_parser.py
redisdata/: dump.rdb
services/: queue.py
src/app/core/: base.py  bot.py  broker_task.py  cache.py  db.py  logger.py  settings.py  tasks.py  text.py
src/app/crud/: factory.py  product.py  (+2 more)
src/tests/: conftest.py
tests/: conftest.py  fake.py
tests/crud/: test_task_crud.py  test_user_crud.py
tests/factories/: factory.py  task.py  user.py
tests/services/: test_queue.py
(+43 files in other folders)
