[project]
name = "parser-avito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faker>=40.15.0",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "taskiq>=0.12.2",
    "taskiq-redis>=1.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pytest_env]
DB_URL = "postgresql+asyncpg://root:12345678@localhost:5434/test"
CACHE_PORT = 6378